# risingwave-test

./: --format {{.Names}}  .databricks-resources.json  .dockerignore  .gitignore  CLAUDE.md  DUCKDB_LOCALHOST_GUIDE.md  Dockerfile.dagster  ICEBERG_CHANGELOG_HANDLING.md  ICEBERG_RISINGWAVE_INTEGRATION.md  KAFKA_SINK_SETUP.md  KAFKA_TABLES_UPDATE_DELETE_GUIDE.md  ML_IMPLEMENTATION_SUMMARY.md  ML_ONLINE_LEARNING_GUIDE.md  PYTHON_UDF_GUIDE.md  README.md  README_SIMPLE.md  STARROCKS_INTEGRATION.md  dagster.yaml  devbox.json  docker-compose.dagster-prebuilt.yml  docker-compose.yml  docker-entrypoint-dagster.sh  etopt no_correct  produce_events.py  pyproject.toml  ql -h localhost -p 4566 -U root -d dev -A -F, SELECT * FROM rw_catalog.rw_iceberg_files LIMIT 1;  ql -h localhost -p 4566 -d dev -U root --pset pager=off -c SELECT name, connector_props::text, definition FROM rw_catalog.rw_sinks WHERE name='rw_managed_funnel_sink'  risingwave.toml
dbt/: .gitignore  .user.yml  1_up.sh  2_create_topics.sh  3_run_dagster.sh  4_run_dashboard.sh  4_run_modern.sh  5_iceberg_notebook.sh  5_query_iceberg.sh  6_down.sh  DASHBOARD_README.md  README.md  dashboard.py  dbt_project.yml  down.sh  main.py  producer.py  profiles.yml  pyproject.toml  query_raw_iceberg.py  requirements.txt  run_dbt.sh  up.sh
dbt/macros/: create_databricks_connection.sql  create_iceberg_connection.sql  create_udfs.sql  drop_prebuild_sinks.sql  drop_prebuild_sinks_casino.sql  drop_stale_iceberg_sources.sql  sync_from_iceberg_via_trino.sql
dbt/macros/materializations/: iceberg_table.sql  kafka_table.sql  risingwave_iceberg_table.sql  risingwave_source.sql  sink.sql
dbt/models/: demo_operations.sql  funnel.sql  funnel_enriched.sql  funnel_for_iceberg.sql  funnel_from_tables.sql  funnel_summary.sql  funnel_summary_with_country.sql  funnel_training.sql  hermes_cart.sql  hermes_feature_store.sql  hermes_features.sql  hermes_funnel.sql  hermes_page.sql  hermes_purchase.sql  iceberg_campaigns.sql  iceberg_cart_events.sql  iceberg_clickstream_events.sql  iceberg_countries_ref.sql  iceberg_devices.sql  iceberg_hermes_funnel.sql  iceberg_page_catalog.sql  iceberg_page_views.sql  iceberg_purchases.sql  iceberg_sessions.sql  iceberg_users.sql  rw_countries.sql  sink_campaigns_to_iceberg.sql  sink_cart_events_to_iceberg.sql  sink_clickstream_to_iceberg.sql  sink_devices_to_iceberg.sql  sink_funnel_from_tables_to_iceberg.sql  sink_funnel_to_iceberg.sql  sink_funnel_to_kafka.sql  sink_funnel_to_postgres.sql  sink_funnel_to_rw_iceberg.sql  sink_hermes_feature_store_to_iceberg.sql  sink_hermes_features_to_iceberg.sql  sink_page_catalog_to_iceberg.sql  sink_page_views_to_iceberg.sql  sink_purchases_to_iceberg.sql  (+14 more)
dbt/models/casino_prd/: mv_avro_proto_turnover.sql  mv_casino_avro_real_bet.sql  mv_casino_bets_flat.sql  mv_casino_landing.sql  mv_casino_real_bet.sql  mv_casino_real_bet_events.sql  mv_casino_transactions.sql  mv_casino_transactions_full.sql  mv_casino_turnover_90d.sql  mv_casino_turnover_events.sql  mv_casino_turnover_latest.sql  mv_sportsbook_bets.sql  mv_sportsbook_landing.sql  mv_sportsbook_turnover_90d.sql  mv_sportsbook_turnover_events.sql  mv_sportsbook_turnover_latest.sql  mv_turnover_percentage.sql  rw_managed_casino_real_bet.sql  rw_managed_turnover_percentage.sql  sink_casino_avro_redpanda.sql  sink_casino_bets_flat_kafka.sql  sink_casino_landing_databricks.sql  sink_casino_landing_lakekeeper.sql  sink_casino_real_bet.sql  sink_casino_real_bet_databricks.sql  sink_casino_real_bet_kafka.sql  sink_casino_transactions_databricks.sql  src_bets_br.sql  (+19 more)
(+226 files in other folders)
