[project]
name = "risingwave-test"
version = "0.1.0"
description = "Real-time E-commerce Conversion Funnel with RisingWave, dbt, and Iceberg"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka[protobuf,avro]>=2.12.2",
    "fastavro>=1.9.0",
    "grpcio-tools>=1.66.0",
    "dash>=3.4.0",
    "dash-bootstrap-components>=1.4.0",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
    "psycopg2-binary>=2.9.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "dbt-core>=1.11.8",
    "dbt-risingwave>=1.11.6",
    "sqlalchemy>=2.0.46",
    "duckdb>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "dagster>=1.13.3",
    "dagster-dbt>=0.29.3",
    "dagster-webserver>=1.13.3",
    "marimo>=0.10.0",
    # NOTE: Spark version is gated by Iceberg's Spark runtime jar.
    # Iceberg 1.11.0 publishes `iceberg-spark-runtime-4.1_2.13` on Maven Central.
    "pyspark>=4.1.0,<4.2.0",
    "s3fs>=2024.1.0",
    "aiohttp>=3.13.3",
    "psutil>=7.2.2",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "trino>=0.331.0",
    "river>=0.22.0",
    "pyarrow>=24.0.0",
]

[tool.dagster]
module_name = "orchestration.definitions"
project_name = "realtime_funnel"
