[project]
name = "real-time-e-commerce-conversion-funnel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.4.0",
    "dash-bootstrap-components>=1.4.0",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
    "psycopg2-binary>=2.9.0",
    "dbt>=1.0.0.40.14",
    "dbt-core>=1.10.19",
    "dbt-risingwave>=1.10.0",
    "kafka-python>=2.3.0",
    "sqlalchemy>=2.0.46",
]
